# QDax

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  dev.Dockerfile  dev.tpu.Dockerfile  environment.yaml  environment_tpu.yaml  mkdocs.yaml  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-tool.txt  requirements.txt  requirements_tpu.txt  run_comparison_batch_sizes.py  run_comparison_batch_sizes_v2.py  run_comparison_batch_sizes_v3.py  run_qd.py  run_qd_v2.py  run_qd_v3.py  setup.py  tool.Dockerfile
.github/: CONTRIBUTING.md  pull_request_template.md
.github/workflows/: ci.yaml  package_release.yaml  test_package_release.yaml
analysis/: configuration.py  data_collectors.py  data_loaders.py  data_reader.py  p_values.py  paper_plot1.py  parser_results.py  plot_evalpers.py  plot_finalqdscore.py  plot_metrics.py  plot_metricsvstime.py  plot_pareto.py  plot_repertoire.py  plot_utils.py  refactor_comparison_plot.py  saving_loading_utils.py  timings.py
docs/: caveats.md  index.md  installation.md  notebooks  overview.md  requirements.txt
docs/api_documentation/: environments.md  tasks.md  utils.md
docs/css/: mkdocstrings.css
docs/guides/: CONTRIBUTING.md
emitter_state/: emitter_state.pickle
examples/: aurora.ipynb  cmaes.ipynb  cmame.ipynb  cmamega.ipynb  dads.ipynb  dcrlme.ipynb  diayn.ipynb  distributed_mapelites.ipynb  dns.ipynb  evosax_cmame.ipynb  jumanji_snake.ipynb  mapelites.ipynb  mapelites_asktell.ipynb  mapelites_brax_v2.ipynb  me_arm_example.py  me_example.py  me_sac_pbt.ipynb  me_td3_pbt.ipynb  mees.ipynb  mels.ipynb  mome.ipynb  nsga2_spea2.ipynb  omgmega.ipynb  pga_aurora.ipynb  pgame.ipynb  pgame_occupancy.ipynb  policy_cma_me.ipynb  qdpg.ipynb  sac_pbt.ipynb  simple_ga.ipynb  smerl.ipynb  td3_pbt.ipynb
examples/notebooks/: dads_example.ipynb  diayn_example.ipynb  mapelites_example.ipynb  mees_example.ipynb  nsga2_spea2_example.ipynb  pgame_example.ipynb  smerl_example.ipynb
examples/scripts/: me_example.py
experiments/: README.md  train_mapelites.py  train_mapelites_v2.py  train_quality_diversity.py
notebooks/: Run_QDax_Example_Notebook.ipynb  cmaes_example.ipynb  cmame_example.ipynb  cmamega_example.ipynb  colab_mapelites.ipynb  dads_example.ipynb  diayn_example.ipynb  local_mapelites.ipynb  map-elites-multi-objectives.ipynb  mapelites_example.ipynb  mees_example.ipynb  mome_example.ipynb  nsga2-spea2.ipynb  nsga2_spea2_example.ipynb  omgmega_example.ipynb  pgame_example.ipynb  run_mapelites_example_notebook.ipynb  smerl_example.ipynb
notebooks/last_repertoire/: centroids.npy  descriptors.npy  fitnesses.npy
qdax/: __init__.py  custom_types.py  env_utils.py  tasks.py  types.py
qdax/algorithms/: README.md  map_elites.py  mutation_operators.py  quality_diversity.py  utils.py
qdax/analysis/: plotting.py
qdax/baselines/: cmaes.py  dads.py  dads_smerl.py  diayn.py  diayn_smerl.py  genetic_algorithm.py  nsga2.py  pbt.py  sac.py  sac_pbt.py  spea2.py  td3.py  td3_pbt.py
qdax/brax_envs/: __init__.py  bd_extractors.py  exploration_wrappers.py  locomotion_wrappers.py  pointmaze.py  utils_wrappers.py
qdax/buffers/: buffers.py
qdax/core/: aurora.py  cmaes.py  custom_repertoire_map_elites.py  dads.py  dads_smerl.py  dads_supervised.py  diayn.py  diayn_smerl.py  diayn_supervised.py  distributed_map_elites.py  dns.py  genetic_algorithm.py  map_elites.py  mels.py  mome.py  multi_objectives_map_elites.py  nsga2.py  sac.py  spea2.py  td3.py
qdax/emitters/: emitter.py  emitters.py  mutation_operators.py  pga_me_emitter.py  standard_emitters.py
qdax/environments/: __init__.py  base_wrappers.py  bd_extractors.py  descriptor_extractors.py  exploration_wrappers.py  humanoidtrap.py  init_state_wrapper.py  locomotion_wrappers.py  pointmaze.py  wrappers.py
qdax/envs/: deterministic_ant.py  deterministic_ant_cost_reward.py  deterministic_ant_no_reward.py  deterministic_ant_xyobs.py  deterministic_halfcheetah.py  deterministic_halfcheetah_modobs.py  deterministic_hexapod.py  deterministic_hopper.py  deterministic_humanoid.py  deterministic_humanoid_fullcollision.py  deterministic_humanoid_xyobs.py  deterministic_walker.py
qdax/losses/: td3_loss.py
qdax/qd_utils/: cvt_archive.py  grid_archive.py  grid_repertoire.py
qdax/stats/: metrics.py  timings.py  training_state.py
qdax/tasks/: README.md  archimedean_spiral.py  arm.py  brax_envs.py  deceptive_evolvability.py  hypervolume_functions.py  jumanji_envs.py  ssf.py  standard_functions.py
qdax/training/: configuration.py  emitters.py  qd.py  qd_v2.py
qdax/utils/: bd_extractors.py  buffers.py  evo_utils.py  evosax_interface.py  mdp_utils.py  metrics.py  mome_utils.py  networks.py  pareto_front.py  plotting.py  repertoire.py  sampling.py  seq2seq_model.py  serialization.py  td3_utils.py  train_seq2seq.py  uncertainty_metrics.py
singularity/: build_final_image  build_final_image.py  singularity.def  start_container  start_container.py
tests/algorithms_test/: map_elites_test.py
tests/baselines_test/: cmaes_test.py  cmame_test.py  cmamega_test.py  dads_smerl_test.py  dads_test.py  dcrlme_test.py  diayn_smerl_test.py  diayn_test.py  ga_test.py  me_pbt_sac_test.py  me_pbt_td3_test.py  mees_test.py  omgmega_test.py  pbt_sac_test.py  pbt_td3_test.py  pgame_test.py  qdpg_test.py  sac_test.py  td3_test.py
tests/core_test/: aurora_test.py  cmaes_test.py  cmamega_test.py  dads_smerl_test.py  dads_test.py  diayn_smerl_test.py  diayn_test.py  dns_test.py  ga_test.py  map_elites_test.py  (+6 more)
(+173 files in other folders)
