[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qdax"
dynamic = ["version"]
description = "QDax: Accelerated Quality-Diversity"
readme = "README.md"
authors = [
    {name = "AIRL and InstaDeep Ltd", email = "adaptive.intelligent.robotics@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["Quality-Diversity", "Open-endedness", "Neuroevolution", "Reinforcement Learning"]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.8.0",
    "flax>=0.12.0",
    "brax>=0.10.4",
    "chex>=0.1.86",
    "optax>=0.1.9",
    "scikit-learn>=1.5.1",
    "scipy>=1.10.1",
    "tensorflow-probability>=0.24.0",
]

[project.optional-dependencies]
dev = [
	"coverage",
	"pre-commit==2.12.1",
	"pytest==6.2.5",
	"pytest-assume==2.4.3",
	"mypy",
]
docs = [
	"mkdocs",
	"mkdocs-material",
	"mkdocstrings[python]",
	"mkdocs-jupyter",
	"mkdocs-autorefs",
]
examples = [
	"tqdm",
	"ipykernel",
	"ipywidgets",
	"mediapy",
	"jumanji>=0.3.1",
]

[project.urls]
Homepage = "https://github.com/adaptive-intelligent-robotics/QDax"

[tool.hatch.version]
path = "qdax/__init__.py"

[tool.mypy]
python_version = "3.11"
namespace_packages = true
incremental = false
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
allow_redefinition = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
strict_optional = true
strict_equality = true
explicit_package_bases = true
follow_imports = "skip"
ignore_missing_imports = true
